--- a/index.html
+++ b/index.html
@@ -61,9 +61,7 @@
         #calendar-container {
             display: flex;
             align-items: center;
-            justify-content: center;
             margin: 20px auto;
-            width: 80%;
         }
 
         #calendar-section {
@@ -99,6 +97,7 @@
             height: auto;
             background-color: white;
             margin: 0 20px;
+            z-index: 1;
         }
 
         #face {
