--- a/index.html
+++ b/index.html
@@ -197,8 +197,12 @@
     </div>
     <!-- GIFer nederst -->
     <div id="gif-bottom">
+                <img class="gif" src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExdjd6MzB0cGw0NGFnenR6M2JsMDFwa3diOW45dmR3Z3RrbjdxYW8zMyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/ShRRL5pf8ZvoY/giphy.gif" alt="Neon Flash">
+
         <img class="gif" src="https://arngren.net/Porsche.911_turbo_anim.gif" alt="Retro Sparkle">
         <img class="gif" src="https://arngren.net/Porsche.911_turbo_anim.gif" alt="Neon Flash">
+                <img class="gif" src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExdjd6MzB0cGw0NGFnenR6M2JsMDFwa3diOW45dmR3Z3RrbjdxYW8zMyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/ShRRL5pf8ZvoY/giphy.gif" alt="Neon Flash">
+
     </div>
     <!-- Tekstseksjoner -->
     <section>
