--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Mats bytter jobb. Veldig trist og veldig kult!</title>
     <style>
         body {
+            text-align: center;
             margin: 0;
             padding: 0;
             font-family: "Comic Sans MS", cursive, sans-serif;
