--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Mats bytter jobb. Veldig trist og veldig kult!</title>
     <style>
         body {
+            min-width: 1684px;
             text-align: center;
             margin: 0;
             padding: 0;
