Shit fuck assa, Cunt

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Mats bytter jobb. Veldig trist og veldig kult!</title>
+    <title>Mats bytter jobb. Veldig trist, men også veldig kult!</title>
     <style>
         body {
             min-width: 1684px;
