--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
 <body>
 
-    <h1 class="site-title">Mats bytter jobb. Veldig trist og veldig kult!</h1>
+    <h1 class="site-title">Mats bytter jobb. Veldig trist, men også veldig kult!</h1>
 
     <!-- GIFer øverst -->
     <div id="gif-top">
