--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             text-align: center;
             margin: 0;
             padding: 0;
-            font-family: "Comic Sans MS", cursive, sans-serif;
+            font-family: "Comic Sans MS", sans-serif;
             color: #ffffff;
             background-color: #000000;
             background-image: url('https://media.tenor.com/AJBv6U1rfkQAAAAM/background-image-galaxy.gif');
