--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="no">
 
 <head>
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap" rel="stylesheet">
+
     <meta charset="UTF-8">
     <title>Mats bytter jobb. Veldig trist, men også veldig kult!</title>
     <style>
@@ -10,7 +12,7 @@
             text-align: center;
             margin: 0;
             padding: 0;
-            font-family: "Comic Sans MS", sans-serif;
+            font-family: "Comic Sans MS", "Comic Neue", sans-serif;
             color: #ffffff;
             background-color: #000000;
             background-image: url('https://media.tenor.com/AJBv6U1rfkQAAAAM/background-image-galaxy.gif');
