--- a/index.html
+++ b/index.html
@@ -147,6 +147,12 @@
             text-shadow: 2px 2px #000000;
         }
 
+        #visitor-counter img {
+            width: 100px;
+            border: 3px inset #00ffff;
+            background-color: white;
+        }
+
         .visitor-box {
             display: inline-block;
             background: #ffffff;
@@ -243,7 +249,8 @@
 
     <div id="visitor-counter">
         Besøksteller:
-        <span class="visitor-box" id="counter">Laster inn...</span>
+        <img
+            src="https://api.visitorbadge.io/api/visitors?path=https%3A%2F%2Fmatslb.github.io%2Fmats-bytter-jobb%2F&amp;label=&amp;labelColor=%23000000&amp;countColor=%23000000&amp;labelStyle=upper">
     </div>
 
 
