--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <html lang="no">
-
+<link rel="icon" href="https://erdetfesthosmatsikveld.no/favicon.ico">
 <head>
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap" rel="stylesheet">
 
