--- a/index.html
+++ b/index.html
@@ -174,6 +174,14 @@
             border: 2px solid #ff0000;
             z-index: 1000;
         }
+
+        #player {
+            position: absolute;
+            bottom: 0;
+            right: 0;
+            width: 20px;
+            height: 20px;
+        }
     </style>
 </head>
 
