--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
         alt="Under construction" style="display:block;margin:30px auto;">
 
 
-    <div id="soundcloud-player-container">
+    <div id="soundcloud-player-container" style="opacity: 0;">
         <iframe id="sc-player" width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
             src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/425246451&auto_play=false">
         </iframe>
