--- a/index.html
+++ b/index.html
@@ -395,5 +395,9 @@
         }, { once: true });
     </script>
 </body>
+<footer>
+    © 2025 <a target="_blank" rel="noopener noreferrer"
+        href="https://no.linkedin.com/in/mats-l%C3%B8vstrand-berntsen-4682b2142">Mats Løvstrand Berntsen</a>
+</footer>
 
 </html>
