--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
           <textarea id="message" placeholder="Din hilsen" required></textarea>
           <label>
             <input type="checkbox" required />
-            Dette er ekte mitt navn og jeg er snill mot folk og fe.
+            Dette er mitt faktiske navn og jeg er snill mot folk og fe.
           </label>
           <button type="submit">Send inn</button>
         </form>
