--- a/index.html
+++ b/index.html
@@ -476,6 +476,11 @@
     </div>
     <div class="split-screen">
       <section class="guestbook-section">
+        <img
+          width="75"
+          src="
+        https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExdW9tb3k3Y3F2emt4cGdkbWxvcTV4bXc5bDJvOHVqNWw1NTFjeDN2YSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/HxFDhA4TSjaxwI6T3s/giphy.gif"
+        />
         <h3>Gjestebok</h3>
         <form id="guestbook-form">
           <h4>Send inn din hilsen!</h4>
