--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
             document.querySelector(".main-title").textContent =
                 daysLeft > 0
                     ? `NEDTELLING: ${daysLeft} dag${daysLeft === 1 ? "" : "er"} igjen!`
-                    : "GRATULERER – DAGEN ER HER!";
+                    : "Snipp snapp snute - Mats er ute";
         }
 
         update();
